--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
         with:
           fetch-depth: 0
       - uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
       - name: Build and Release
         uses: goreleaser/goreleaser-action@v4
         with:
