--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.19
-      - name: Build and Release
+      - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
           version: latest
@@ -23,6 +23,13 @@ jobs:
       - name: Build
         run: |
           goreleaser release --rm-dist --snapshot
+
+      - name: Log in to ghcr.io
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push
         run: |
